# scdataminifier-sdk

./: .classpath  .gitignore  .project  BUILD.md  IMAGE_CODEC_GUIDE.md  LICENSING.md  QR_GUIDE.md  SPEC.md  build-jar.sh  build-server-jar.sh  obfuscate.sh
.github/workflows/: build-decoder-mobile.yml  build-mobile-native.yml  build-native-jar.yml
mobile/: README.md
mobile-native/: CMakeLists.txt  README.md  ios-exported-symbols.txt
mobile-native/android/: ScDecoder.kt
mobile-native/ios/: ScDecoder.swift
mobile-native/scripts/: assert-clean.sh  build-android.sh  build-deps-decoder.sh  build-ios.sh  build-linux-test.sh  scrub.py
mobile-native/src/: scdec.c  scdec.h  scdec_jni.c
mobile/android/: ScImage.kt
mobile/ios/: ScDataParser.swift  ScImage.swift
native/: CMakeLists.txt  Dockerfile.linux  PACKAGING.md  README.md  VERSIONS.env  WINDOWS-BUILD.md
native/scripts/: build-android.sh  build-deps.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.ps1  fetch-sources.sh  install-to-resources.sh
native/src/: license.c  license.h  license_pubkey.h  scimage_codec.c  scimage_codec.h  scimage_jni.c  sha256.c  sha256.h
native/test/: license_test.c
resources/native/linux-aarch64/: README.txt
resources/native/linux-x86_64/: README.txt
resources/native/macos-x86_64/: README.txt
resources/native/windows-x86_64/: README.txt
samples/: ROCKY9-TEST.md  SdkSmokeTest.java
src/com/scdataminifier/: ScData.java  ScDataException.java  ScDataParser.java  ScDataWriter.java  ScHeader.java
src/com/scdataminifier/callback/: DecryptionCallback.java  DictionaryProvider.java  EncryptionCallback.java  SignatureVerifier.java  Signer.java
src/com/scdataminifier/demo/: HsmDemo.java  SCDataMinifierDemo.java
src/com/scdataminifier/enums/: CompressionType.java  ContentType.java  EncryptionType.java  ImageType.java  SignatureAlgorithm.java  TagType.java
src/com/scdataminifier/hsm/: Pkcs11Hsm.java
src/com/scdataminifier/image/: BundledNativeLoader.java  CliImageEncoder.java  ImageEncoder.java  JpegExif.java  LibraryObfuscator.java  NativeImageCodec.java  NativeLibraryLoader.java  ScImageCodec.java
src/com/scdataminifier/model/: Content.java  ScImage.java  Table.java  TableCell.java  Tlv.java  Variable.java
src/com/scdataminifier/qr/: Ecc.java  MultiQr.java  MultiQrAssembler.java  MultiQrWriter.java  QrCode.java  SCQrGenerator.java
src/com/scdataminifier/util/: ByteReader.java  ByteWriter.java  CompressionUtil.java  Crc16.java  CryptoUtil.java  ImageContainers.java  ValueCodec.java
